읽은 메세지 표시 형태 구현(테스트 X)